<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="ime_name">kasahorow</string>
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point
    </string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for
        details.
    </string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is\u0020<xliff:g id="trace_file">%s</xliff:g></string>
    <string name="menu_about_item">About</string>
    <string name="how_to_pointer_title">Welcome to kasahorow</string>
    <string name="change_log_card_version_title_template">\u0020\u0020Latest changes for v<xliff:g id="name">%s</xliff:g>\u0020\u0020</string>
    <string name="change_log_entry_header_template_without_name">\u0020\u0020v<xliff:g id="code">%s</xliff:g>\u0020\u0020</string>
    <string name="change_log_url">More:\u0020<xliff:g id="url">%s</xliff:g></string>
    <string name="notification_text_testers">This is a beta version. Use with caution!</string>
    <string name="testers_version">Testers build!</string>
    <string name="language_root_tile">Language</string>
    <string name="language_keyboards_settings_tile">Enable keyboards and languages.</string>
    <string name="language_grammar_settings_tile">Configure correction behavior and other dictionaries.</string>
    <string name="language_tweaks_settings_tile">Tweaks and more.</string>
    <string name="ui_root_tile">UI</string>
    <string name="ui_theme_settings_tile">Pick and configure keyboard themes.</string>
    <string name="ui_effects_settings_tile">Keyboard effects and experience.</string>
    <string name="changelog">Change Log</string>
    <string name="search_market_for_addons">Search for add-ons</string>
    <string name="search_market_for_keyboard_addons">Get more keyboards at the app store</string>
    <string name="search_market_for_quick_key_addons">Get more <i>Quick-Text</i> add-ons at the app store…</string>
    <string name="no_market_store_available">Could not find an app store on your device.\nUnable to search for add-ons!</string>
    <string name="keyboard_theme_tweak_group">Tweaks</string>
    <string name="close_button">Close</string>
    <string name="delete_button">Delete</string>
    <string name="added_word">Saved:\u0020<xliff:g id="word">%s</xliff:g></string>
    <string name="revert_added_word_question">Remove\?</string>
    <string name="removed_word">Removed:\u0020<xliff:g id="word">%s</xliff:g></string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="hint_double_tap_to_close">Again to remove suggestions</string>
    <string name="voice_input_not_installed_title">Voice Is Not Installed</string>
    <string name="voice_input_not_installed_text">Voice Input is not installed on your device.\nThat
        can be easily fixed: install it now from the app store.
    </string>
    <string name="voice_input_not_installed_action_install">Install</string>
    <string name="voice_input_not_installed_action_do_not_install">No</string>
    <string name="voice_input_not_voice_pack_in_market">I can not find voice input
        (com.google.android.voicesearch) in the app store. Sorry, voice input will not work on your
        device.
    </string>
    <string name="change_ime">Change input method</string>
    <string name="override_dictionary">Override default dictionary</string>
    <string name="override_dictionary_title">Override\u0020<xliff:g id="word">%s</xliff:g>\u0020dictionary</string>
    <string name="gesture_settings">Gestures</string>
    <string name="effects_group">Effects</string>
    <string name="ime_settings">Keyboard settings</string>
    <string name="switch_incognito">Incognito Mode</string>
    <string name="use_system_vibration_title">Use system vibration</string>
    <string name="use_system_vibration_off_summary">Using custom vibration setting</string>
    <string name="use_system_vibration_on_summary">Using Android system vibration setting</string>
    <string name="vibrate_on_key_press_title">Vibrate on key-press</string>
    <string name="vibrate_on_key_press_value_template">%d milliseconds</string>
    <string name="night_mode_screen">Night-Mode settings</string>
    <string name="night_mode_description">Night-Mode will change these features:</string>
    <string name="night_mode_state_summary">Currently, Night-Mode trigger:\u0020%s</string>
    <string name="night_mode_dialog_title">Enable Night-Mode</string>
    <string name="night_mode_type_never">Never</string>
    <string name="night_mode_type_follow_system">Follow system</string>
    <string name="night_mode_type_always">Always</string>
    <string name="night_mode_app_night_theme">Darken Settings App UI</string>
    <string name="night_mode_darken_keyboard_theme">Darken keyboard theme</string>
    <string name="night_mode_sound_control">Disable key-press sounds</string>
    <string name="night_mode_vibration_control">Disable key-press vibrations</string>
    <string name="power_save_mode_screen">Power-Saving settings</string>
    <string name="power_save_mode_description">Power-Saving mode will reduce the energy consumption of kasahorow by disabling features:</string>
    <string name="power_save_mode_state_summary">Currently, Power-Saving trigger:\u0020%s</string>
    <string name="power_save_mode_dialog_title">Enable Power-Saving mode</string>
    <string name="power_save_mode_types_never">Never</string>
    <string name="power_save_mode_types_lower_battery">When low-battery</string>
    <string name="power_save_mode_types_always">Always</string>
    <string name="power_saving_keyboard_theme_name">Power-Saving mode theme</string>
    <string name="power_saving_keyboard_theme_description">Dark colors, simple layout which may require less power from the device.</string>
    <string name="power_save_mode_animation_control">Disable animations and key-previews</string>
    <string name="power_save_mode_sound_control">Disable key-press sounds</string>
    <string name="power_save_mode_vibration_control">Disable key-press vibrations</string>
    <string name="power_save_mode_suggestions_control">Disable word suggestions</string>
    <string name="power_save_mode_gesture_typing_control">Disable Gesture-Typing</string>
    <string name="power_save_mode_theme_control">Switch to dark, simple theme</string>
    <string name="pop_text_type_title">Pop typed text from keys</string>
    <string name="pop_text_type_summary">When to pop text out of pressed keys. Currently:\u0020%s</string>
    <string name="pop_text_type_dialog_title">Select pop-text type</string>
    <string name="pop_text_type_never">Never</string>
    <string name="pop_text_type_on_correction">On word correction</string>
    <string name="pop_text_type_on_word">On any word</string>
    <string name="pop_text_type_any_key">On any key</string>
    <string name="input_field_type_password">Password input field</string>
    <string name="input_field_type_email">Email input field</string>
    <string name="input_field_type_url">URL input field</string>
    <string name="input_field_type_im">Messaging input field</string>
    <string name="sound_on">Sound on key-press</string>
    <string name="sound_on_summary">Sound effects on soft keyboard press.</string>
    <string name="use_custom_sound_volume">Set custom volume</string>
    <string name="use_custom_sound_volume_on_summary">Sounds effects volume is custom.</string>
    <string name="use_custom_sound_volume_off_summary">Sounds effects volume is the system\'s notifications volume.</string>
    <string name="custom_sound_volume">Custom key-press volume</string>
    <string name="vibrate_on_long_press_title">Vibrate on long-press</string>
    <string name="vibrate_on_long_press_summary_on">A soft vibration when long-press action is invoked.</string>
    <string name="switch_keyboard_on_space">Space switches keyboards</string>
    <string name="switch_keyboard_on_space_on_summary">Switch from symbols/numbers to alphabet when pressing space.</string>
    <string name="switch_keyboard_on_space_off_summary">Do not switch from symbols/numbers to alphabet when pressing space.</string>
    <string name="colorize_nav_bar_title">Draw behind the navigation-bar</string>
    <string name="colorize_nav_bar_summary_on">Will draw the keyboard background behind the navigation-bar. This is not supported by all devices.</string>
    <string name="colorize_nav_bar_summary_off">Do not draw behind the navigation-bar.</string>
    <string name="persistent_layout_per_package_id_title">Remember alphabet layout per App</string>
    <string name="persistent_layout_per_package_id_off_summary">Use the same layout for all Apps.</string>
    <string name="persistent_layout_per_package_id_on_summary">Automatically switch to the previous layout used in the App.</string>
    <string name="one_shot_quick_text_popup">Auto close after key-press</string>
    <string name="one_shot_quick_text_popup_on_summary">Close Quick-Text popup after pressing a key.</string>
    <string name="one_shot_quick_text_popup_off_summary">Keep Quick-Text popup open until Close key is pressed.</string>
    <string name="quick_text_tags_search">Suggest Emojis by tag typing</string>
    <string name="quick_text_tags_search_on_summary">Search emojis by tag, when typing starts with
        colon (:)
    </string>
    <string name="quick_text_tags_search_off_summary"/>
    <string name="hide_soft_when_physical">Hide keyboard on physical key</string>
    <string name="hide_soft_when_physical_on_summary">Hide soft keyboard when physical keyboard is
        used
    </string>
    <string name="hide_soft_when_physical_off_summary">Show soft keyboard when physical keyboard is
        used
    </string>
    <string name="enable_alt_space_language_shortcut">Alt + Space switches languages</string>
    <string name="extension_kbd_top_none">No top row</string>
    <string name="extension_kbd_top_small">Small keys</string>
    <string name="extension_kbd_top_regular">Regular sized keys</string>
    <string name="extension_kbd_top_small_numbers">Numbers keys</string>
    <string name="extension_kbd_top_numbers_alt">Alternate number keys</string>
    <string name="extension_kbd_top_nav">Navigation keys</string>
    <string name="extension_kbd_top_nav_alt">Navigation keys alternative</string>
    <string name="extension_kbd_top_nav_alt_no_numb">Navigation keys alternative. No numbers row in pwd mode</string>
    <string name="extension_kbd_top_numbers_simple">Simple, numbers only</string>
    <string name="extension_kbd_top_terminal">Terminal</string>
    <string name="extension_kbd_top_text_editing">Quick text editing</string>
    <string name="extension_kbd_bottom_regular_with_voice">Regular</string>
    <string name="extension_kbd_bottom_regular">Classic (no mic)</string>
    <string name="extension_kbd_bottom_iphone">iPhone styled (no mic)</string>
    <string name="extension_kbd_bottom_iphone_with_voice">iPhone styled with mic</string>
    <string name="extension_kbd_bottom_alt">Alternate (no mic)</string>
    <string name="extension_kbd_bottom_alt_with_mic">Alternate with mic</string>
    <string name="extension_kbd_bottom_old">Old School</string>
    <string name="extension_kbd_bottom_simple">Simple</string>
    <string name="extension_kbd_bottom_simple_alt">Simple Alternative</string>
    <string name="extension_kbd_bottom_row_aosp">AOSP styled</string>
    <string name="extension_kbd_bottom_ng">New Generation - Testing</string>
    <string name="extension_kbd_bottom_ng_no_apo">New Generation (without apostroph) - Testing</string>
    <string name="extension_kbd_extension_numbers_symbols">Numbers and symbols</string>
    <string name="extension_kbd_bottom_minimal">Minimal</string>
    <string name="extension_kbd_bottom_minimal_no_emoji">Minimal (no emoji)</string>
</resources>