<?xml version="1.0" encoding="UTF-8"?>
<ExtensionKeyboards>
    <!-- top rows -->
    <ExtensionKeyboard
        id="6cc9ded5-8dca-4968-860f-eb787209a6d1"
        nameResId="@string/extension_kbd_top_none"
        extensionKeyboardResId="@xml/ext_kbd_top_row_none"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="1"
        />
    <ExtensionKeyboard
        id="e60bb32b-6688-4dec-b9d0-2b04c64916c5"
        nameResId="@string/extension_kbd_top_small"
        extensionKeyboardResId="@xml/ext_kbd_top_row_small"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="2"
        />
    <ExtensionKeyboard
        id="5f1d6d76-f8f7-467c-b93f-6c8d6c4a6dfc"
        nameResId="@string/extension_kbd_top_regular"
        extensionKeyboardResId="@xml/ext_kbd_top_row_normal"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="3"
        />
    <ExtensionKeyboard
        id="79071476-ba8a-4048-9306-fb56d2cebf63"
        nameResId="@string/extension_kbd_top_small_numbers"
        extensionKeyboardResId="@xml/ext_kbd_top_row_numbers"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="4"
        />
    <ExtensionKeyboard
        id="48acf701-77b4-471b-bfbb-c10ba5bb75d1"
        nameResId="@string/extension_kbd_top_numbers_alt"
        extensionKeyboardResId="@xml/ext_kbd_top_row_numbers_alt"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="5"
        />
    <ExtensionKeyboard
        id="8fc6a38c-7437-468d-a484-79d13c1f8e33"
        nameResId="@string/extension_kbd_top_nav"
        extensionKeyboardResId="@xml/ext_kbd_top_row_nav"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="6"
        />
    <ExtensionKeyboard
        id="e5f441bc-5097-48e3-b602-0cf88987f5a0"
        nameResId="@string/extension_kbd_top_nav_alt"
        extensionKeyboardResId="@xml/ext_kbd_top_row_nav_alt"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="7"
        />
    <ExtensionKeyboard
        id="29135db9-c080-42bc-b7da-c5e02b32ccf5"
        nameResId="@string/extension_kbd_top_nav_alt_no_numb"
        extensionKeyboardResId="@xml/ext_kbd_top_row_nav_alt_no_numb"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="8"
        />
    <ExtensionKeyboard
        id="ed69b9e6-002b-44fa-8c8c-f70a75ba7bc4"
        nameResId="@string/extension_kbd_top_numbers_simple"
        extensionKeyboardResId="@xml/ext_kbd_top_row_numbers_simple"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="9"
        />
    <ExtensionKeyboard
        id="b97c4340-d3e3-41b0-b92d-7a47bc35ea24"
        nameResId="@string/extension_kbd_top_terminal"
        extensionKeyboardResId="@xml/ext_kbd_top_row_terminal"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="10"
        />
    <ExtensionKeyboard
        id="6d19b30e-807e-4287-8ce2-5c96c9264238"
        nameResId="@string/extension_kbd_top_text_editing"
        extensionKeyboardResId="@xml/ext_kbd_top_row_text_editing"
        extensionKeyboardType="@integer/extension_keyboard_type_top_row"
        description=""
        index="11"
        />


    <!-- bottom rows -->
    <ExtensionKeyboard
        id="c921fb90-31ed-46f4-b8a2-1322d9a62238"
        nameResId="@string/extension_kbd_bottom_regular_with_voice"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_regular_with_voice"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="1"
        />
    <ExtensionKeyboard
        id="88f5920b-b596-4fce-8577-648bdef21639"
        nameResId="@string/extension_kbd_bottom_regular"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_regular"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="2"
        />
    <ExtensionKeyboard
        id="1723f0ff-4e57-48d8-ac54-3f7464964e3a"
        nameResId="@string/extension_kbd_bottom_iphone_with_voice"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_iphone_with_mic"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="3"
        />
    <ExtensionKeyboard
        id="2a918967-13b3-4fd3-8368-815702dd6348"
        nameResId="@string/extension_kbd_bottom_iphone"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_iphone"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="4"
        />
    <ExtensionKeyboard
        id="a63d37a5-abdc-4a67-9892-24df66e9d744"
        nameResId="@string/extension_kbd_bottom_alt_with_mic"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_alt_with_mic"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="5"
        />
    <ExtensionKeyboard
        id="250afc96-914b-4722-82c2-fc46642ca1a4"
        nameResId="@string/extension_kbd_bottom_alt"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_alt"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="6"
        />
    <ExtensionKeyboard
        id="92c3490c-3d2a-42ed-ad29-ec6ec4508a38"
        nameResId="@string/extension_kbd_bottom_ng"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_ng"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="7"
        />
    <ExtensionKeyboard
        id="ceacb7d6-600a-4cf6-af26-99ee9c9cb236"
        nameResId="@string/extension_kbd_bottom_ng_no_apo"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_ng_no_apo"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="8"
        />
    <ExtensionKeyboard
        id="b48c7ef9-0874-4899-83b1-3fc252851f2d"
        nameResId="@string/extension_kbd_bottom_old"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_old"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="9"
        />
    <ExtensionKeyboard
        id="2a2d5d59-b8c1-4afd-9161-e4274444e6ea"
        nameResId="@string/extension_kbd_bottom_simple"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_simple"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="10"
        />
    <ExtensionKeyboard
        id="127552f8-9e4d-4a4b-b519-e4fb453a158d"
        nameResId="@string/extension_kbd_bottom_simple_alt"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_simple_alt"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="11"
        />
    <ExtensionKeyboard
        id="c6c3ab5b-fa49-44b2-9957-94f17a3e2ef8"
        nameResId="@string/extension_kbd_bottom_minimal"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_minimal"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="12"
        />
    <ExtensionKeyboard
        id="66748e41-9730-47e4-bb61-cb89c6fae1fb"
        nameResId="@string/extension_kbd_bottom_minimal_no_emoji"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_minimal_no_emoji"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="13"
        />

    <ExtensionKeyboard
        id="1c7fa882-3307-4787-a47a-a520d03feb4e"
        nameResId="@string/extension_kbd_bottom_row_aosp"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_aosp"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="14"
        />

    <ExtensionKeyboard
        id="4bd88cea-f31e-4500-b20d-f51757350d8R"
        nameResId="@string/extension_kbd_bottom_row_aosp"
        extensionKeyboardResId="@xml/ext_kbd_bottom_row_aosp"
        extensionKeyboardType="@integer/extension_keyboard_type_bottom_row"
        description=""
        index="15"
        />


    <!-- top extension keyboards -->
    <ExtensionKeyboard
        id="d8e1204b-6d19-4673-9b24-0ab9571681a5"
        nameResId="@string/extension_kbd_extension_numbers_symbols"
        extensionKeyboardResId="@xml/ext_kbd_ext_keyboard_numbers_symbols"
        extensionKeyboardType="@integer/extension_keyboard_type_extension_keyboard"
        description=""
        index="2"
        />
</ExtensionKeyboards>
